--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "boostrap/scss/bootstrap-reboot";
+@import "boostrap/scss/bootstrap-grid";
+@import "boostrap/scss/bootstrap-utilities";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
