--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -13,7 +13,7 @@
         <mat-icon matListItemIcon>home</mat-icon>
         Dashboard
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item href="/categorias">
         <mat-icon matListItemIcon>bookmarks</mat-icon>
         Categorias
       </a>
