--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -13,11 +13,11 @@
         <mat-icon matListItemIcon>home</mat-icon>
         Dashboard
       </a>
-      <a mat-list-item href="/categorias">
+      <a mat-list-item [routerLink]="['/categorias']">
         <mat-icon matListItemIcon>bookmarks</mat-icon>
         Categorias
       </a>
-      <a mat-list-item href="#">
+      <a mat-list-item [routerLink]="['/notas']">
         <mat-icon matListItemIcon>collections_bookmark</mat-icon>
         Notas
       </a>
