--- a/src/app/views/notas/listar/listagem-notas.component.html
+++ b/src/app/views/notas/listar/listagem-notas.component.html
@@ -1,4 +1,4 @@
-<main class="container-fluid my-4">
+<main class="container my-4">
   <h1 class="fs-2">Listagem de Notas</h1>
 
   <section
@@ -8,27 +8,36 @@
     <a
       mat-flat-button
       class="col-md-6 col-lg-4 col-xxl-2 fs-6 py-4"
-      [routerLink]="['/nota', 'cadastrar']"
+      [routerLink]="['/notas', 'cadastrar']"
     >
       <mat-icon>bookmark_add</mat-icon>
       Cadastrar
     </a>
   </section>
+
   <hr />
 
   <div *ngIf="notas$ | async as itens" class="row g-3 mt-2">
-    <div *ngFor="let item of itens" class="col-lg-4 col-xxl-3">
-      <mat-card class="mat-mdc-elevation-specific mat-elevation-z5 h-100">
-        <mat-card-header>
+    <div *ngFor="let item of itens" class="col-md-6 col-lg-4">
+      <mat-card
+        class="card-animado mat-mdc-elevation-specific mat-elevation-z3 h-100"
+      >
+        <mat-card-header class="d-flex justify-content-between">
           <mat-card-title class="titulo-card">{{ item.titulo }}</mat-card-title>
+
+          <span>{{ item.categoria.titulo }}</span>
         </mat-card-header>
 
-        <mat-card-footer class="d-flex justify-content-end p-3 gap-1 mt-auto">
+        <mat-card-content class="mt-4">
+          <p>{{ item.conteudo }}</p>
+        </mat-card-content>
+
+        <mat-card-footer class="d-flex justify-content-end gap-1 p-3 mt-auto">
           <a
             mat-icon-button
             class="botao-editar"
             matTooltip="Editar {{ item.titulo }}"
-            [routerLink]="['/nota', 'editar', item.id]"
+            [routerLink]="['/notas', 'editar', item.id]"
           >
             <mat-icon>edit</mat-icon>
           </a>
@@ -36,7 +45,7 @@
             mat-icon-button
             class="botao-excluir"
             matTooltip="Excluir {{ item.titulo }}"
-            [routerLink]="['/nota', 'excluir', item.id]"
+            [routerLink]="['/notas', 'excluir', item.id]"
           >
             <mat-icon>delete</mat-icon>
           </a>
