--- a/src/app/views/notas/editar/edicao-nota.component.html
+++ b/src/app/views/notas/editar/edicao-nota.component.html
@@ -1,13 +1,9 @@
-<div class="container">
+<main class="container my-4">
   <h2 class="fs-2">Edição de Nota</h2>
 
   <hr />
   <div class="row g-2">
-    <form
-      [formGroup]="notaForm"
-      (ngSubmit)="editar()"
-      class="col-lg-8 col-xl-5"
-    >
+    <form [formGroup]="notaForm" (ngSubmit)="editar()" class="col">
       <mat-form-field class="w-100" appearance="outline">
         <mat-label>Título</mat-label>
         <input
@@ -41,33 +37,37 @@
         </mat-select>
         <mat-icon matSuffix>bookmark</mat-icon>
       </mat-form-field>
-      <mat-card class="col">
-        <mat-card-header class="d-flex justify-content-between align-items-top">
-          <mat-card-title [ngSwitch]="notaForm.get('titulo')?.pristine">
-            <span *ngSwitchCase="true">Esta é a sua nota</span>
-            <span *ngSwitchCase="false">{{
-              notaForm.get("titulo")?.value
-            }}</span>
-          </mat-card-title>
-          <mat-chip-set color="primary" aria-label="Dog selection">
-            <mat-chip>
-              Excluir Nota
-              {{ notaForm.get("categoriaId")?.value }}
-            </mat-chip>
-          </mat-chip-set>
-        </mat-card-header>
-        <mat-card-content
-          [ngSwitch]="notaForm.get('conteudo')?.pristine"
-          class="mt-3 fs-6"
-        >
-          <span *ngSwitchCase="true"
-            >Preencha os campos para ver como ela ficará.</span
+      <div class="row justify-content-end g-2 mt-2">
+        <mat-card class="col-6">
+          <mat-card-header
+            class="d-flex justify-content-between align-items-top"
           >
-          <span *ngSwitchCase="false">{{
-            notaForm.get("conteudo")?.value
-          }}</span>
-        </mat-card-content>
-      </mat-card>
+            <mat-card-title [ngSwitch]="notaForm.get('titulo')?.pristine">
+              <span *ngSwitchCase="true">Esta é a sua nota</span>
+              <span *ngSwitchCase="false">{{
+                notaForm.get("titulo")?.value
+              }}</span>
+            </mat-card-title>
+            <mat-chip-set color="primary" aria-label="Dog selection">
+              <mat-chip>
+                Categoria
+                {{ notaForm.get("categoriaId")?.value }}
+              </mat-chip>
+            </mat-chip-set>
+          </mat-card-header>
+          <mat-card-content
+            [ngSwitch]="notaForm.get('conteudo')?.pristine"
+            class="mt-3 fs-6"
+          >
+            <span *ngSwitchCase="true"
+              >Preencha os campos para ver como ela ficará.</span
+            >
+            <span *ngSwitchCase="false">{{
+              notaForm.get("conteudo")?.value
+            }}</span>
+          </mat-card-content>
+        </mat-card>
+      </div>
       <div
         class="row justify-content-center justify-content-md-end g-2 gap-1 mt-5"
       >
@@ -87,4 +87,4 @@
       </div>
     </form>
   </div>
-</div>
+</main>
