--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+mat-error {
+  font-size: 16px;
+  margin-top: 5px;
+}
