--- a/src/app/views/notas/cadastrar/cadastro-nota.component.html
+++ b/src/app/views/notas/cadastrar/cadastro-nota.component.html
@@ -3,7 +3,7 @@
 
   <hr />
 
-  <div class="row g-3 mt-2">
+  <div class="row g-3 mt-2" *ngIf="categorias$ | async as categorias">
     <form [formGroup]="notaForm" (submit)="cadastrar()" class="col">
       <mat-form-field class="w-100" appearance="fill">
         <mat-label>Título</mat-label>
@@ -13,9 +13,15 @@
           placeholder="Ex: Lavar o cachorro"
         />
         <mat-icon matSuffix>title</mat-icon>
+        <mat-error *ngIf="titulo?.invalid && (titulo?.errors)!['required']"
+          >O Titulo é obrigatorio.</mat-error
+        >
+        <mat-error *ngIf="titulo?.invalid && (titulo?.errors)!['minlength']"
+          >O Titulo precisa conter ao menos 3 caracteres.</mat-error
+        >
       </mat-form-field>
 
-      <mat-form-field class="w-100" appearance="fill">
+      <mat-form-field class="w-100 mt-3" appearance="fill">
         <mat-label>Conteúdo</mat-label>
         <textarea
           formControlName="conteudo"
@@ -23,13 +29,12 @@
           placeholder="Ex: Lavar o cachorro"
         ></textarea>
         <mat-icon matSuffix>subtitles</mat-icon>
+        <mat-error *ngIf="conteudo?.invalid && (conteudo?.errors)!['required']"
+          >O Conteudo é obrigatorio.</mat-error
+        >
       </mat-form-field>
 
-      <mat-form-field
-        *ngIf="categorias$ | async as categorias"
-        class="w-100"
-        appearance="fill"
-      >
+      <mat-form-field class="w-100 mt-3" appearance="fill">
         <mat-label>Categoria</mat-label>
         <mat-select formControlName="categoriaId">
           <mat-option
@@ -39,6 +44,10 @@
           >
         </mat-select>
         <mat-icon matSuffix>bookmark</mat-icon>
+        <mat-error
+          *ngIf="categoriaId?.invalid && (categoriaId?.errors)!['required']"
+          >O categoria é obrigatorio.</mat-error
+        >
       </mat-form-field>
 
       <div class="row justify-content-end g-2 mt-2">
@@ -59,7 +68,10 @@
             <div [ngSwitch]="campoNaoFoiTocado('categoriaId')">
               <span *ngSwitchCase="true">Categoria</span>
               <span *ngSwitchCase="false">{{
-                notaForm.get("categoriaId")?.value
+                mapearTituloDaCategoria(
+                  notaForm.get("categoriaId")?.value,
+                  categorias
+                )
               }}</span>
             </div>
           </mat-card-header>
