--- a/src/app/views/notas/editar/edicao-nota.component.html
+++ b/src/app/views/notas/editar/edicao-nota.component.html
@@ -17,9 +17,15 @@
             placeholder="Ex: Lavar o cachorro"
           />
           <mat-icon matSuffix color="primary">title</mat-icon>
+          <mat-error *ngIf="titulo?.invalid && (titulo?.errors)!['required']"
+            >O Titulo é obrigatorio.</mat-error
+          >
+          <mat-error *ngIf="titulo?.invalid && (titulo?.errors)!['minlength']"
+            >O Titulo precisa conter ao menos 3 caracteres.</mat-error
+          >
         </mat-form-field>
 
-        <mat-form-field class="w-100" appearance="fill">
+        <mat-form-field class="w-100 mt-3" appearance="fill">
           <mat-label>Conteúdo</mat-label>
           <textarea
             formControlName="conteudo"
@@ -27,9 +33,12 @@
             placeholder="Ex: Lavar o cachorro"
           ></textarea>
           <mat-icon matSuffix color="primary">subtitles</mat-icon>
+          <mat-error *ngIf="titulo?.invalid && (titulo?.errors)!['required']"
+            >O conteudo é obrigatorio.</mat-error
+          >
         </mat-form-field>
 
-        <mat-form-field class="w-100" appearance="fill">
+        <mat-form-field class="w-100 mt-3" appearance="fill">
           <mat-label>Categoria</mat-label>
           <mat-select formControlName="categoriaId">
             <mat-option
@@ -39,6 +48,11 @@
             >
           </mat-select>
           <mat-icon matSuffix color="primary">bookmark</mat-icon>
+          <mat-error
+            *ngIf="categoriaId?.invalid && (categoriaId?.errors)!['required']"
+            >O categoria é obrigatorio.</mat-error
+          >
+          >
         </mat-form-field>
 
         <div class="row justify-content-end g-2 mt-2">
