--- a/src/app/views/notas/listar/listagem-notas.component.html
+++ b/src/app/views/notas/listar/listagem-notas.component.html
@@ -29,39 +29,51 @@
   </div>
 
   <div *ngIf="notas$ | async as itens" class="row g-3 mt-2">
-    <div *ngFor="let item of itens" class="col-md-6 col-lg-4">
-      <mat-card
-        class="card-animado mat-mdc-elevation-specific mat-elevation-z3 h-100"
-      >
-        <mat-card-header class="d-flex justify-content-between">
-          <mat-card-title class="titulo-card">{{ item.titulo }}</mat-card-title>
+    <ng-container *ngFor="let item of itens">
+      <div *ngIf="!item.arquivada" class="col-md-6 col-lg-4">
+        <mat-card
+          class="card-animado mat-mdc-elevation-specific mat-elevation-z3 h-100"
+        >
+          <mat-card-header class="d-flex justify-content-between">
+            <mat-card-title class="titulo-card">{{
+              item.titulo
+            }}</mat-card-title>
 
-          <span>{{ item.categoria.titulo }}</span>
-        </mat-card-header>
+            <span>{{ item.categoria.titulo }}</span>
+          </mat-card-header>
 
-        <mat-card-content class="mt-4">
-          <p>{{ item.conteudo }}</p>
-        </mat-card-content>
+          <mat-card-content class="mt-4">
+            <p>{{ item.conteudo }}</p>
+          </mat-card-content>
 
-        <mat-card-footer class="d-flex justify-content-end gap-1 p-3 mt-auto">
-          <a
-            mat-icon-button
-            class="botao-editar"
-            matTooltip="Editar {{ item.titulo }}"
-            [routerLink]="['/notas', 'editar', item.id]"
-          >
-            <mat-icon>edit</mat-icon>
-          </a>
-          <a
-            mat-icon-button
-            class="botao-excluir"
-            matTooltip="Excluir {{ item.titulo }}"
-            [routerLink]="['/notas', 'excluir', item.id]"
-          >
-            <mat-icon>delete</mat-icon>
-          </a>
-        </mat-card-footer>
-      </mat-card>
-    </div>
+          <mat-card-footer class="d-flex justify-content-end gap-1 p-3 mt-auto">
+            <a
+              mat-icon-button
+              class="botao-editar"
+              matTooltip="Editar {{ item.titulo }}"
+              [routerLink]="['/notas', 'editar', item.id]"
+            >
+              <mat-icon>edit</mat-icon>
+            </a>
+            <a
+              mat-icon-button
+              class="botao-excluir"
+              matTooltip="Excluir {{ item.titulo }}"
+              [routerLink]="['/notas', 'excluir', item.id]"
+            >
+              <mat-icon>delete</mat-icon>
+            </a>
+            <a
+              mat-icon-button
+              class="botao-arquivar"
+              matTooltip="Arquivar {{ item.titulo }}"
+              (click)="arquivar(item)"
+            >
+              <mat-icon>archive</mat-icon>
+            </a>
+          </mat-card-footer>
+        </mat-card>
+      </div>
+    </ng-container>
   </div>
 </main>
