Implementada notas Arquivadas

--- a/src/app/views/notas/excluir/exclusao-nota.component.html
+++ b/src/app/views/notas/excluir/exclusao-nota.component.html
@@ -22,7 +22,7 @@
           mat-stroked-button
           class="col-sm-3 col-md-2"
           type="button"
-          routerLink="/notas"
+          (click)="voltar()"
         >
           <mat-icon>keyboard_return</mat-icon>
           Voltar
